--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   validate:
     runs-on: ubuntu-latest
-    if: contains(github.head_ref, 'smooai-auto-update-')
 
     steps:
       - uses: actions/checkout@v4
@@ -20,49 +19,24 @@ jobs:
       
       - uses: pnpm/action-setup@v2
         with:
-          version: 9
+          version: 10
           
       - name: Install dependencies
         run: pnpm install
-        
-      - name: Type check
-        run: |
-          if grep -q "\"typecheck\":" package.json; then
-            pnpm typecheck
-          else
-            echo "No typecheck script found, skipping"
-          fi
-        
+
+      - name: Typecheck
+        run: pnpm typecheck
+
       - name: Lint
-        run: |
-          if grep -q "\"lint\":" package.json; then
-            pnpm lint
-          else
-            echo "No lint script found, skipping"
-          fi
-        
+        run: pnpm lint
+
       - name: Test
-        run: |
-          if grep -q "\"test\":" package.json; then
-            pnpm test
-          else
-            echo "No test script found, skipping"
-          fi
+        run: pnpm test
 
-      - name: Auto-merge and trigger publish
-        if: success()
-        run: |
-          # Merge the PR
-          gh pr merge \
-            --squash \
-            --auto \
-            --delete-branch \
-            "${{ github.event.pull_request.number }}"
+      - name: Build
+        run: pnpm build
 
-          # Wait a moment for the merge to complete
-          sleep 5
-
-          # Trigger publish workflow
-          gh workflow run publish.yml
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      # - name: Require changesets
+      #   run: pnpm changeset status --since=main
+          
+          
