--- a/package.json
+++ b/package.json
@@ -1,60 +1,71 @@
 {
-  "name": "@smooai/utils",
-  "version": "0.0.0",
-  "description": "Shared utilities and tools for SmooAI projects",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SmooAI/utils.git"
-  },
-  "keywords": [
-    "utils",
-    "tools",
-    "aws-lambda",
-    "hono",
-    "smooai"
-  ],
-  "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist/**"
-  ],
-  "scripts": {
-    "build": "pnpm createEntryPoints && pnpm dlx cross-env tsup",
-    "createEntryPoints": "npx vite-node ./src/scripts/createEntryPoints.ts -i \"src/**/*.ts\"",
-    "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix",
-    "test": "vitest run --passWithNoTests",
-    "typecheck": "tsc --noEmit --skipLibCheck",
-    "watch": "tsup --watch",
-    "check-all": "pnpm run typecheck && pnpm run lint && pnpm run test && pnpm run build",
-    "preinstall": "npx only-allow pnpm"
-  },
-  "dependencies": {
-    "@oclif/core": "^2.0.0",
-    "@smooai/logger": "latest",
-    "find-up": "^7.0.0",
-    "hono": "^4.7.2",
-    "http-status-codes": "^2.3.0",
-    "libphonenumber-js": "^1.12.4",
-    "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
-  },
-  "devDependencies": {
-    "@smooai/config-eslint": "latest",
-    "@smooai/config-typescript": "latest",
-    "@types/aws-lambda": "^8.10.119",
-    "@types/node": "^20.13.0",
-    "glob": "^10.3.10",
-    "tsup": "^8.4.0",
-    "vite": "^5.4.14",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.7"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+    "name": "@smooai/utils",
+    "version": "0.0.0",
+    "description": "A collection of shared utilities and tools used across SmooAI projects. This package provides common functionality to standardize and simplify development across all SmooAI repositories.",
+    "keywords": [
+        "utils",
+        "tools",
+        "aws-lambda",
+        "hono",
+        "smooai"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/SmooAI/utils.git"
+    },
+    "license": "MIT",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist/**"
+    ],
+    "scripts": {
+        "build": "pnpm createEntryPoints && pnpm dlx cross-env tsup",
+        "check-all": "pnpm run typecheck && pnpm run lint && pnpm run test && pnpm run build",
+        "ci:publish": "pnpm publish -r",
+        "createEntryPoints": "pnpm vite-node ./src/scripts/createEntryPoints.ts -i \"src/**/*.ts\"",
+        "format": "prettier --write \"**/*.{ts,tsx,md,json,js,cjs,mjs}\"",
+        "preinstall": "npx only-allow pnpm",
+        "lint": "eslint src/",
+        "lint:fix": "eslint src/ --fix",
+        "prepare": "husky",
+        "test": "vitest run --passWithNoTests",
+        "typecheck": "tsc --noEmit --skipLibCheck",
+        "watch": "tsup --watch"
+    },
+    "dependencies": {
+        "@oclif/core": "^2.0.0",
+        "@smooai/logger": "latest",
+        "find-up": "^7.0.0",
+        "hono": "^4.7.2",
+        "http-status-codes": "^2.3.0",
+        "libphonenumber-js": "^1.12.4",
+        "zod": "^3.24.2",
+        "zod-validation-error": "^3.4.0"
+    },
+    "devDependencies": {
+        "@changesets/cli": "^2.28.1",
+        "@smooai/config-eslint": "^1.0.7",
+        "@smooai/config-typescript": "^1.0.11",
+        "@types/aws-lambda": "^8.10.119",
+        "@types/node": "^20.13.0",
+        "@vercel/style-guide": "^6.0.0",
+        "eslint": "^9.21.0",
+        "glob": "^10.3.10",
+        "husky": "^9.1.7",
+        "prettier": "^3.5.3",
+        "prettier-plugin-packagejson": "^2.5.10",
+        "tsup": "^8.4.0",
+        "vite": "^5.4.14",
+        "vite-node": "^3.0.8",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.0.7"
+    },
+    "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
+    "engines": {
+        "node": ">=20.0.0"
+    },
+    "publishConfig": {
+        "access": "public"
+    }
 }
