--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@smooai/config-typescript-extended/base.json",
+    "extends": "@smooai/config-typescript/base.json",
     "compilerOptions": {
         "lib": ["ES2023"],
         "outDir": "./dist",
@@ -8,7 +8,8 @@
         "baseUrl": "./",
         "paths": {
             "@smooai/logger/*": ["../logger/src/*"],
-            "@smooai/utils/*": ["../utils/src/*"]
+            "@smooai/utils/*": ["../utils/src/*"],
+            "@/*": ["src/*"]
         }
     },
     "include": ["./src/**/*.ts", "./src/**/*.tsx", "src/index.ts", "index.ts", "tsup.config.ts"],
