--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "eslint": "^9.21.0",
         "glob": "^10.3.10",
         "husky": "^9.1.7",
+        "lint-staged": "^15.4.3",
         "prettier": "^3.5.3",
         "prettier-plugin-packagejson": "^2.5.10",
         "tsup": "^8.4.0",
