Fix git hooks and typings output.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "dist/**"
     ],
     "scripts": {
-        "build": "pnpm createEntryPoints && pnpm dlx cross-env tsup",
+        "build": "pnpm createEntryPoints && pnpm exec tsup",
         "check-all": "pnpm run typecheck && pnpm run lint && pnpm run test && pnpm run build",
         "ci:publish": "pnpm publish -r",
         "createEntryPoints": "pnpm vite-node ./src/scripts/createEntryPoints.ts -i \"src/**/*.ts\"",
