--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,13 @@ jobs:
         run: pnpm format
       
       - name: Version Update 🦋  
+        id: changesets
         uses: changesets/action@v1  
         with:  
           commit: "🦋 New version release"  
           title: "🦋 New version release"  
-          publish: pnpm ci:publish  
+          publish: pnpm ci:publish
+          createGithubReleases: true
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           NPM_TOKEN: ${{ secrets.SMOOAI_NPM_TOKEN }}  
