--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
       contents: write
       pull-requests: write
       id-token: write
+      actions: write
     steps:
       - name: Checkout code repository
         uses: actions/checkout@v4
@@ -54,7 +55,7 @@ jobs:
         with:  
           commit: "🦋 New version release"  
           title: "🦋 New version release"  
-          publish: pnpm ci:publish
+          publish: pnpm ci:publish && pnpm changeset publish
           createGithubReleases: true
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
