Change to using changeset publish.

--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "scripts": {
         "build": "pnpm createEntryPoints && pnpm exec tsup",
         "check-all": "pnpm run typecheck && pnpm run lint && pnpm run test && pnpm run build",
-        "ci:publish": "pnpm publish -r && pnpm changeset publish",
+        "ci:publish": "pnpm build && pnpm changeset publish",
         "createEntryPoints": "pnpm vite-node ./src/scripts/createEntryPoints.ts -i \"src/**/*.ts\"",
         "format": "prettier --write \"**/*.{ts,tsx,md,json,js,cjs,mjs}\"",
         "preinstall": "npx only-allow pnpm",
