--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
         "@oclif/core": "^2.0.0",
         "@oclif/plugin-help": "^6.2.26",
         "@oclif/plugin-plugins": "^5.4.34",
-        "@smooai/logger": "^1.0.16",
+        "@smooai/logger": "^1.0.21",
         "@standard-schema/spec": "^1.0.0",
         "@standard-schema/utils": "^0.3.0",
         "find-up": "^7.0.0",
@@ -133,8 +133,9 @@
     },
     "devDependencies": {
         "@changesets/cli": "^2.28.1",
-        "@smooai/config-eslint": "^1.0.11",
-        "@smooai/config-typescript": "^1.0.15",
+        "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+        "@smooai/config-eslint": "^1.0.13",
+        "@smooai/config-typescript": "^1.0.16",
         "@types/aws-lambda": "^8.10.119",
         "@types/node": "^20.13.0",
         "@vercel/style-guide": "^6.0.0",
@@ -143,7 +144,9 @@
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
         "prettier": "^3.5.3",
+        "prettier-plugin-css-order": "^2.1.2",
         "prettier-plugin-packagejson": "^2.5.10",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "tsup": "^8.4.0",
         "vite": "^6.2.4",
         "vite-node": "^3.1.1",
