Fixed sqsHandler and updated createEntryPoints to have wildcard exports intead of discrete as well as adding typesVersions to package.json.

--- a/package.json
+++ b/package.json
@@ -24,94 +24,28 @@
         "url": "https://smooai.com"
     },
     "exports": {
-        "./validation/standardSchema": {
-            "types": "./dist/validation/standardSchema.d.ts",
-            "import": "./dist/validation/standardSchema.mjs",
-            "require": "./dist/validation/standardSchema.js",
-            "default": "./dist/validation/standardSchema.js"
-        },
-        "./validation/phoneNumber": {
-            "types": "./dist/validation/phoneNumber.d.ts",
-            "import": "./dist/validation/phoneNumber.mjs",
-            "require": "./dist/validation/phoneNumber.js",
-            "default": "./dist/validation/phoneNumber.js"
-        },
-        "./utils/sleep": {
-            "types": "./dist/utils/sleep.d.ts",
-            "import": "./dist/utils/sleep.mjs",
-            "require": "./dist/utils/sleep.js",
-            "default": "./dist/utils/sleep.js"
-        },
-        "./scripts/createEntryPoints": {
-            "types": "./dist/scripts/createEntryPoints.d.ts",
-            "import": "./dist/scripts/createEntryPoints.mjs",
-            "require": "./dist/scripts/createEntryPoints.js",
-            "default": "./dist/scripts/createEntryPoints.js"
-        },
-        "./file/findFile": {
-            "types": "./dist/file/findFile.d.ts",
-            "import": "./dist/file/findFile.mjs",
-            "require": "./dist/file/findFile.js",
-            "default": "./dist/file/findFile.js"
-        },
-        "./error/errorHandler": {
-            "types": "./dist/error/errorHandler.d.ts",
-            "import": "./dist/error/errorHandler.mjs",
-            "require": "./dist/error/errorHandler.js",
-            "default": "./dist/error/errorHandler.js"
-        },
-        "./env/env": {
-            "types": "./dist/env/env.d.ts",
-            "import": "./dist/env/env.mjs",
-            "require": "./dist/env/env.js",
-            "default": "./dist/env/env.js"
-        },
-        "./collections/CaseInsensitiveSet": {
-            "types": "./dist/collections/CaseInsensitiveSet.d.ts",
-            "import": "./dist/collections/CaseInsensitiveSet.mjs",
-            "require": "./dist/collections/CaseInsensitiveSet.js",
-            "default": "./dist/collections/CaseInsensitiveSet.js"
-        },
-        "./collections/CaseInsensitiveMap": {
-            "types": "./dist/collections/CaseInsensitiveMap.d.ts",
-            "import": "./dist/collections/CaseInsensitiveMap.mjs",
-            "require": "./dist/collections/CaseInsensitiveMap.js",
-            "default": "./dist/collections/CaseInsensitiveMap.js"
-        },
-        "./api/sqsHandler": {
-            "types": "./dist/api/sqsHandler.d.ts",
-            "import": "./dist/api/sqsHandler.mjs",
-            "require": "./dist/api/sqsHandler.js",
-            "default": "./dist/api/sqsHandler.js"
-        },
-        "./api/hono": {
-            "types": "./dist/api/hono.d.ts",
-            "import": "./dist/api/hono.mjs",
-            "require": "./dist/api/hono.js",
-            "default": "./dist/api/hono.js"
-        },
-        "./api/apiHandler": {
-            "types": "./dist/api/apiHandler.d.ts",
-            "import": "./dist/api/apiHandler.mjs",
-            "require": "./dist/api/apiHandler.js",
-            "default": "./dist/api/apiHandler.js"
-        },
-        "./api/ApiError": {
-            "types": "./dist/api/ApiError.d.ts",
-            "import": "./dist/api/ApiError.mjs",
-            "require": "./dist/api/ApiError.js",
-            "default": "./dist/api/ApiError.js"
-        },
         ".": {
             "types": "./dist/index.d.ts",
             "import": "./dist/index.mjs",
             "require": "./dist/index.js",
             "default": "./dist/index.js"
+        },
+        "./*": {
+            "types": "./dist/*.d.ts",
+            "import": "./dist/*.mjs",
+            "require": "./dist/*.js"
         }
     },
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "typesVersions": {
+        "*": {
+            "*": [
+                "./dist/*"
+            ]
+        }
+    },
     "bin": {
         "create-entry-points": "./dist/scripts/createEntryPoints.js"
     },
