--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     },
     "bin": {
         "create-entry-points": "./dist/scripts/createEntryPoints.js",
-        "generate-git-branch": "./dist/scripts/generateGitBranch.js"
+        "generate-git-branch": "./dist/scripts/generate-git-branch.js"
     },
     "files": [
         "dist/**"
@@ -59,7 +59,7 @@
         "ci:publish": "pnpm build && pnpm changeset publish",
         "createEntryPoints": "pnpm vite-node ./src/scripts/createEntryPoints.ts -i \"src/**/*.ts\"",
         "format": "prettier --write \"**/*.{ts,tsx,md,json,js,cjs,mjs}\"",
-        "generateGitBranch": "pnpm vite-node ./src/utils/generate-git-branch.ts",
+        "generate-git-branch": "pnpm vite-node ./src/utils/generate-git-branch.ts",
         "preinstall": "npx only-allow pnpm",
         "lint": "eslint src/",
         "lint:fix": "eslint src/ --fix",
