Refactors Zod error handling to use z.prettifyError for clearer messages across API, middleware, SQS, and error handler; updates tests accordingly

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "preinstall": "npx only-allow pnpm",
         "lint": "eslint src/",
         "lint:fix": "eslint src/ --fix",
+        "pre-commit-check": "(zsh .husky/pre-commit)",
         "prepare": "husky",
         "test": "vitest run --passWithNoTests",
         "typecheck": "tsc --noEmit --skipLibCheck",
@@ -74,15 +75,14 @@
         "@oclif/core": "^2.0.0",
         "@oclif/plugin-help": "^6.2.26",
         "@oclif/plugin-plugins": "^5.4.34",
-        "@smooai/logger": "^3.0.8",
+        "@smooai/logger": "^3.1.0",
         "@standard-schema/spec": "^1.0.0",
         "@standard-schema/utils": "^0.3.0",
         "find-up": "^7.0.0",
         "hono": "^4.7.2",
         "http-status-codes": "^2.3.0",
         "libphonenumber-js": "^1.12.4",
-        "zod": "^3.24.2",
-        "zod-validation-error": "^3.4.0",
+        "zod": "^4.0.0",
         "zx": "^8.8.1"
     },
     "devDependencies": {
